--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+html, body {
+    min-width: 290px;
+    color: #4d4e53;
+    background-color: #ffffff;
+    font-family: 'Open Sans', Arial, sans-serif;
+    line-height: 1.5;
 }
 
 *, html {
@@ -105,11 +111,27 @@ main{
     margin-bottom: 110px;
 }
 
-code{
-  
-  background-color: #dedede; 
-}
+
 
 section{
   display: block;
+}
+section article {
+    color: #4d4e53;
+    margin: 15px;
+    font-size: 0.96em;
+}
+
+code {
+    display: block;
+    text-align: left;
+    white-space: pre-line;
+    position: relative;
+    word-break: normal;
+    word-wrap: normal;
+    line-height: 2;
+    background-color: #f7f7f7;
+    padding: 15px;
+    margin: 10px;
+    border-radius: 5px;
 }
